<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommonControls.EditT">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtusername" />

        <EditText
            android:id="@+id/edt_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtpassword"
            />
        <EditText
            android:id="@+id/edtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus/>
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txtBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtbirthday"
            />
        <EditText
            android:id="@+id/edtBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus/>
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtemail"
            />
        <EditText
            android:id="@+id/edtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus/>
        </EditText>
    </TableRow>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnreg" />

    <TextView
        android:id="@+id/txtShowMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:inputType="textMultiLine"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</TableLayout>