<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/InKhungDangKy"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/dangnhap"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/InKhungDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/tendangnhap"
            android:padding="10dp"
            android:textColorHint="@color/colorGray" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/matkhau"
            android:padding="10dp"
            android:password="true"

            android:textColorHint="@color/colorGray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/nam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="nam"
                android:textColor="@color/colorWhite" />

            <RadioButton
                android:id="@+id/nu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nữ"
                android:textColor="@color/colorWhite" />
        </RadioGroup>

        <EditText
            android:id="@+id/mssv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/masinhvien"
            android:padding="10dp"


            android:textColorHint="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorWhite" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>